feat: add student training plan view